Add fragments section to config.yml to enable fragment handling

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -16,6 +16,7 @@ framework:
     default_locale:  %locale%
     session:         ~
     trusted_proxies: ~
+    fragments:       ~
 
 # Twig Configuration
 twig:
