--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "symfony-cmf/sandbox",
+    "description": "Demo Sandbox for the Symfony Content Management Framework",
+    "homepage": "http://cmf.symfony.com",
+    "license": "MIT",
     "autoload": {
         "psr-0": { "": "src/" }
     },
@@ -15,13 +18,13 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "symfony-cmf/symfony-cmf": "1.0.0-beta1",
-        "symfony-cmf/simple-cms-bundle": "1.0.0-beta1",
+        "symfony-cmf/symfony-cmf": "1.0.0-beta2",
+        "symfony-cmf/simple-cms-bundle": "1.0.0-beta2",
         "symfony-cmf/search-bundle": "1.0.0-beta1",
-        "symfony-cmf/create-bundle": "1.0.0-beta1",
+        "symfony-cmf/create-bundle": "1.0.0-beta2",
         "symfony-cmf/routing-auto-bundle": "1.0.0-alpha3",
         "symfony-cmf/blog-bundle": "1.0.0-alpha3",
-        "jackalope/jackalope-jackrabbit": "1.0.0-beta2",
+        "jackalope/jackalope-jackrabbit": "1.0.0-beta3",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
         "doctrine/doctrine-fixtures-bundle": "2.1.*",
@@ -30,6 +33,9 @@
         "eko/feedbundle": "1.0.*",
         "lunetics/locale-bundle": "2.2.*",
         "liip/functional-test-bundle": "1.0.*"
+    },
+    "require-dev": {
+        "symfony-cmf/testing": "1.0.*"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "1.0.0-beta1",
