upping blog bundle version too, add travis build status to readme

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony-cmf/search-bundle": "1.0.0-beta1",
         "symfony-cmf/create-bundle": "1.0.0-beta2",
         "symfony-cmf/routing-auto-bundle": "1.0.0-alpha3",
-        "symfony-cmf/blog-bundle": "1.0.0-alpha3",
+        "symfony-cmf/blog-bundle": "1.0.0-beta1",
         "jackalope/jackalope-jackrabbit": "1.0.0-beta3",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
