--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,54 +82,51 @@ doctrine_phpcr:
                 - en
                 - de
 
+knp_menu:
+    twig: true
+
+cmf_core:
+    multilang:
+        locales: %locales%
+    persistence:
+        phpcr:
+            enabled: true
+
+cmf_blog:
+    blog_basepath: /cms/content
+
 cmf_routing:
-    route_basepath: /cms/routes
     chain:
         routers_by_id:
             cmf_routing.dynamic_router: 20
             router.default: 100
     dynamic:
-        enabled: true
         controllers_by_type:
             demo_type: sandbox_main.controller:typeAction
         controllers_by_class:
             Sandbox\MainBundle\Document\DemoClassContent: sandbox_main.controller:classAction
-            Symfony\Cmf\Bundle\RoutingBundle\Document\RedirectRoute:  cmf_routing.redirect_controller:redirectAction
+            Symfony\Cmf\Bundle\RoutingBundle\Doctrine\Phpcr\RedirectRoute:  cmf_routing.redirect_controller:redirectAction
             Symfony\Cmf\Bundle\BlogBundle\Document\Blog: cmf_blog.blog_controller:listAction
             Symfony\Cmf\Bundle\BlogBundle\Document\Post: cmf_blog.blog_controller:viewPostAction
 
         templates_by_class:
-            Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent: SandboxMainBundle:MultilangStaticContent:index.html.twig
-
-        locales: %locales%
+            Symfony\Cmf\Bundle\ContentBundle\Doctrine\Phpcr\StaticContent: SandboxMainBundle:MultilangStaticContent:index.html.twig
 
 cmf_simple_cms:
+    multilang:
+        locales: %locales%
     routing:
         templates_by_class:
             Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page:  CmfSimpleCmsBundle:Page:index.html.twig
-
-knp_menu:
-    twig: true
 
 cmf_create:
     phpcr_odm: true
     map:
         'http://rdfs.org/sioc/ns#Post': 'Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent'
     image:
+        enabled: true
         model_class: Symfony\Cmf\Bundle\CreateBundle\Document\Image
         controller_class: Symfony\Cmf\Bundle\CreateBundle\Controller\PHPCRImageController
-
-cmf_content:
-    multilang:
-      locales: %locales%
-
-cmf_menu:
-    multilang:
-      locales: %locales%
-
-cmf_blog:
-    blog_basepath: /cms/content
-
 
 sonata_block:
     default_contexts: [cms]
@@ -149,10 +146,18 @@ sonata_admin:
         cmf_core.admin_extension.publish_workflow.time_period:
             implements:
                 - Symfony\Cmf\Bundle\CoreBundle\PublishWorkflow\PublishTimePeriodInterface
-
         cmf_core.admin_extension.publish_workflow.publishable:
             implements:
                 - Symfony\Cmf\Bundle\CoreBundle\PublishWorkflow\PublishableInterface
+        cmf_core.admin_extension.translatable:
+            implements:
+                - Symfony\Cmf\Bundle\CoreBundle\Translatable\TranslatableInterface
+        cmf_menu.admin_extension.menu_node_referrers:
+            implements:
+                - Symfony\Cmf\Bundle\MenuBundle\Model\MenuNodeReferrersInterface
+        cmf_routing.admin_extension.route_referrers:
+            implements:
+                - Symfony\Cmf\Component\Routing\RouteReferrersInterface
 
     templates:
         # default global templates
@@ -167,7 +172,7 @@ sonata_admin:
             content:
                 label: Content
                 items:
-                    - cmf_content.multilang.admin
+                    - cmf_content.admin
                     - cmf_block.simple_admin
                     - cmf_block.container_admin
                     - cmf_block.reference_admin
@@ -181,7 +186,7 @@ sonata_admin:
                 label: Menu
                 items:
                     - cmf_menu.menu_admin
-                    - cmf_menu.multilang.menu_admin
+                    - cmf_menu.node_admin
             blog:
                 label: Blog
                 items:
@@ -198,7 +203,7 @@ sonata_doctrine_phpcr_admin:
         Doctrine\ODM\PHPCR\Document\Generic:
             valid_children:
                 - all
-        Symfony\Cmf\Bundle\ContentBundle\Document\MultilangStaticContent:
+        Symfony\Cmf\Bundle\ContentBundle\Doctrine\Phpcr\StaticContent:
             valid_children:
                 - Symfony\Cmf\Bundle\BlockBundle\Document\SimpleBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ContainerBlock
@@ -217,51 +222,24 @@ sonata_doctrine_phpcr_admin:
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ReferenceBlock
                 - Symfony\Cmf\Bundle\BlockBundle\Document\ActionBlock
         Symfony\Cmf\Bundle\SimpleCmsBundle\Document\Page: ~
-        Symfony\Cmf\Bundle\RoutingBundle\Document\Route:
+        Symfony\Cmf\Bundle\RoutingBundle\Doctrine\Phpcr\Route:
             valid_children:
-                - Symfony\Cmf\Bundle\RoutingBundle\Document\Route
-                - Symfony\Cmf\Bundle\RoutingBundle\Document\RedirectRoute
+                - Symfony\Cmf\Bundle\RoutingBundle\Doctrine\Phpcr\Route
+                - Symfony\Cmf\Bundle\RoutingBundle\Doctrine\Phpcr\RedirectRoute
         Symfony\Cmf\Bundle\RoutingBundle\Document\RedirectRoute:
             valid_children: []
-        Symfony\Cmf\Bundle\MenuBundle\Document\Menu:
+        Symfony\Cmf\Bundle\MenuBundle\Doctrine\Phpcr\Menu:
             valid_children:
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MenuNode
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenuNode
-        Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenu:
+                - Symfony\Cmf\Bundle\MenuBundle\Doctrine\Phpcr\MenuNode
+        Symfony\Cmf\Bundle\MenuBundle\Doctrine\Phpcr\MenuNode:
             valid_children:
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MenuNode
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenuNode
-        Symfony\Cmf\Bundle\MenuBundle\Document\MenuNode:
-            valid_children:
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MenuNode
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenuNode
-        Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenuNode:
-            valid_children:
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MenuNode
-                - Symfony\Cmf\Bundle\MenuBundle\Document\MultilangMenuNode
+                - Symfony\Cmf\Bundle\MenuBundle\Doctrine\Phpcr\MenuNode
         Symfony\Cmf\Bundle\BlogBundle\Document\Blog:
             valid_children:
                 - Symfony\Cmf\Bundle\BlogBundle\Document\Post
         Symfony\Cmf\Bundle\BlogBundle\Document\Post:
             valid_children: []
 
-fos_js_routing:
-    routes_to_expose:
-        - admin_bundle_menu_menunode_*
-        - admin_bundle_menu_multilangmenunode_*
-        - admin_bundle_content_multilangstaticcontent_*
-        - admin_bundle_block_simpleblock_*
-        - admin_bundle_block_containerblock_*
-        - admin_bundle_block_referenceblock_*
-        - admin_bundle_block_actionblock_*
-        - admin_bundle_blog_blog_*
-        - admin_bundle_blog_post_*
-        - cmf_routing_route_admin_*
-        - admin_bundle_simplecms_page_*
-        - cmf_tree_browser.phpcr_children
-        - cmf_tree_browser.phpcr_move
-        - sonata.admin.doctrine_phpcr.phpcrodm_children
-        - sonata.admin.doctrine_phpcr.phpcrodm_move
 
 sensio_framework_extra:
     view:    { annotations: false }
