simplified setup for Doctrine DBAL

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony-cmf/create-bundle": "1.0.0-beta3",
         "symfony-cmf/routing-auto-bundle": "1.0.0-alpha4",
         "symfony-cmf/blog-bundle": "1.0.0-beta3",
+        "jackalope/jackalope-doctrine-dbal": "1.0.0-beta3",
         "jackalope/jackalope-jackrabbit": "1.0.0-beta4",
         "doctrine/doctrine-bundle": "1.2.*",
         "doctrine/data-fixtures": "1.0.*",
