deal with twig regression

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.*",
         "twig/extensions": "1.0.*",
+        "twig/twig": "@stable",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
