--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,6 +91,12 @@ cmf_core:
     persistence:
         phpcr:
             enabled: true
+cmf_block:
+    multilang:
+        locales: %locales%
+    persistence:
+        phpcr:
+            enabled: true
 
 cmf_blog:
     blog_basepath: /cms/content
@@ -110,7 +116,7 @@ cmf_routing:
             Symfony\Cmf\Bundle\BlogBundle\Document\Post: cmf_blog.blog_controller:viewPostAction
 
         templates_by_class:
-            Symfony\Cmf\Bundle\ContentBundle\Doctrine\Phpcr\StaticContent: SandboxMainBundle:MultilangStaticContent:index.html.twig
+            Symfony\Cmf\Bundle\ContentBundle\Doctrine\Phpcr\StaticContent: SandboxMainBundle:cmf_cngStaticContent:index.html.twig
 
 cmf_simple_cms:
     multilang:
