--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -183,6 +183,7 @@ sonata_admin:
                     - cmf_block.container_admin
                     - cmf_block.reference_admin
                     - cmf_block.action_admin
+                    - cmf_block.string_admin
             routing:
                 label: URLs
                 items:
