--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -184,6 +184,8 @@ sonata_admin:
                     - cmf_block.reference_admin
                     - cmf_block.action_admin
                     - cmf_block.string_admin
+                    - cmf_block.imagine.slideshow_admin
+                    - cmf_block.imagine.imagine_admin
             routing:
                 label: URLs
                 items:
