--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "symfony-cmf/symfony-cmf": "1.0.0-beta4",
-        "symfony-cmf/simple-cms-bundle": "1.0.0-beta3",
+        "symfony-cmf/symfony-cmf": "1.0.0-beta6",
+        "symfony-cmf/simple-cms-bundle": "1.0.0-RC2",
         "symfony-cmf/search-bundle": "1.0.0-beta2",
-        "symfony-cmf/create-bundle": "1.0.0-beta3",
+        "symfony-cmf/create-bundle": "1.0.0-beta4",
         "symfony-cmf/routing-auto-bundle": "1.0.0-alpha4",
         "symfony-cmf/blog-bundle": "1.0.0-beta3",
         "jackalope/jackalope-doctrine-dbal": "1.0.0-beta3",
@@ -31,12 +31,11 @@
         "doctrine/data-fixtures": "1.0.*",
         "doctrine/doctrine-fixtures-bundle": "2.1.*",
         "sonata-project/cache-bundle": "2.1.*",
-        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.0-beta3",
+        "sonata-project/doctrine-phpcr-admin-bundle": "1.0.0-beta4",
         "eko/feedbundle": "1.0.*",
         "lunetics/locale-bundle": "2.2.*",
         "liip/functional-test-bundle": "1.0.*",
-        "liip/imagine-bundle": "dev-master",
-        "symfony-cmf/media-bundle": "dev-master"
+        "liip/imagine-bundle": "~0.12"
     },
     "require-dev": {
         "symfony-cmf/testing": "1.0.*"
