--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
     "extra": {
         "checkbundles-ignore": [
             "Liip\\FunctionalTestBundle\\LiipFunctionalTestBundle",
-            "Sensio\\Bundle\DistributionBundle\\SensioDistributionBundle"
+            "Sensio\\Bundle\\DistributionBundle\\SensioDistributionBundle"
         ],
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
