--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,7 +7,7 @@ home_redirect:
     pattern: /
     defaults:
         _controller: lunetics_locale.switcher_controller:switchAction
-        route: /cms/routes/en
+        route: /cms/routes/%locale%
         statusCode: 301
         useReferrer: false
 
