--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -260,12 +260,14 @@ liip_search:
     restrict_by_language: true;
 
 cmf_search:
-    translation_strategy: child
-#    translation_strategy: attribute
-#    search_path: /cms/simple
-    search_fields:
-        title: title
-        summary: body
+    persistence:
+        phpcr:
+            translation_strategy: child
+        #    translation_strategy: attribute
+        #    search_basepath: /cms/simple
+            search_fields:
+                title: title
+                summary: body
 
 lunetics_locale:
     strict_mode: true
