allow anonymous inline editing (fixes #207)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,6 +123,8 @@ cmf_simple_cms:
 
 cmf_create:
     editor_base_path: /bundles/cmfcreate/vendor/ckeditor/
+    # for demo purposes we are allowing anonymous inline editing
+    role: IS_AUTHENTICATED_ANONYMOUSLY
 
 sonata_block:
     default_contexts: [cms]
