--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,6 +123,7 @@ cmf_simple_cms:
 
 cmf_create:
     editor_base_path: /bundles/cmfcreate/vendor/ckeditor/
+    # WARNING: REMOVE THIS FOR PRODUCTION SITES
     # for demo purposes we are allowing anonymous inline editing
     role: IS_AUTHENTICATED_ANONYMOUSLY
 
